--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <img class="portrait" src="img/me.png" alt="">
+    <img class="portrait" src="img/gradie.jpg" alt="">
   </div>
   {{>footer}}
 </body>
