--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
+    <p>This site was created by Gradie Mayombe. It uses data from mapbox.com and weather.com</p>
     <img class="portrait" src="img/gradie.jpg" alt="">
   </div>
   {{>footer}}
